revision Sec 4 and 5

--- a/biblio.bib
+++ b/biblio.bib
@@ -2,7 +2,7 @@
   author    = {Benabbou,Nawal and Di Sabatino Di Diodoro, Serena and Perny, Patrice and Viappiani,Paolo},
   title     = {Incremental Preference Elicitation in Multi-attribute Domains for
                Choice and Ranking with the Borda Count},
-  booktitle = {Proceedings of {SUM} 2016},
+  booktitle = {Proc. of {SUM} 2016},
   pages     = {81--95},
   year      = {2016}
 }
@@ -31,7 +31,7 @@
 @InProceedings{Cailloux2014,
 	Title = {Eliciting a Suitable Voting Rule via Examples},
 	Author = {Cailloux,Olivier and Endriss,Ulle},
-	Booktitle = {Proceedings of {ECAI} 2014},
+	Booktitle = {Proc. of {ECAI} 2014},
 	Year = {2014},
 	Pages = {183--188},
 	Doi = {10.3233/978-1-61499-419-0-183},
@@ -51,7 +51,7 @@
 @InProceedings{Konczak05,
   Title = {Voting Procedures with Incomplete Preferences},
   Author = {Konczak,Kathrin and Lang,Jerome},
-  Booktitle = {Proceedings of IJCAI'05},
+  Booktitle = {Proc. of IJCAI'05},
   Year = {2005},
   Pages = {124--129},
   url={www.eecs.harvard.edu/cs286r/courses/fall11/papers/KL05.pdf}
@@ -92,7 +92,7 @@
 	year = {2011},
 	pages = {287-293},
 	title = {Robust Approximation and Incremental Elicitation in Voting Protocols},
-	booktitle = {Proceedings of IJCAI'11},
+	booktitle = {Proc. of IJCAI'11},
 	doi = {10.5591/978-1-57735-516-8/IJCAI11-058}
 }
 
@@ -163,7 +163,7 @@
 	author = {Xia, Lirong and Conitzer, Vincent},
 	title = {Determining Possible and Necessary Winners under Common Voting Rules given Partial Orders},
 	year = {2008},
-	booktitle = {Proceedings of AAAI'08},
+	booktitle = {Proc. of AAAI'08},
 	pages = {196–201},
 	doi= {10.1613/jair.3186}
 }
@@ -173,14 +173,14 @@
 	title = {Communication Complexity of Common Voting Rules},
 	year = {2005},
 	doi = {10.1145/1064009.1064018},
-	booktitle = {Proceedings of EC'05},
+	booktitle = {Proc. of EC'05},
 	pages = {78–87}
 }
 
 @INPROCEEDINGS{Pini2007,
 	author = {Pini, Maria Silvia and Rossi, Francesca and Venable, Kristen Brent and Walsh, Toby},
 	title = {Incompleteness and Incomparability in Preference Aggregation},
-	booktitle = {Proceedings of IJCAI'07},
+	booktitle = {Proc. of IJCAI'07},
 	year = {2007},
 	pages = {1464-1469},
 	doi = {10.1016/j.artint.2010.11.009}
@@ -190,8 +190,7 @@
 	author = {Walsh, Toby},
 	title = {Uncertainty in Preference Elicitation and Aggregation},
 	year = {2007},
-	booktitle = {Proceedings of AAAI'07},
-	volume={1},
+	booktitle = {Proc. of AAAI'07},
 	pages = {3–8},
 	url = {dl.acm.org/doi/10.5555/1619645.1619648}
 }
@@ -200,8 +199,7 @@
 	author = {Walsh, Toby},
 	title = {Complexity of Terminating Preference Elicitation},
 	year = {2008},
-	booktitle = {Proceedings of AAMAS'08},
-	volume={2},
+	booktitle = {Proc. of AAMAS'08},
 	pages = {967–974},
 	url ={dl.acm.org/doi/abs/10.5555/1402298.1402357}
 }
@@ -222,7 +220,7 @@
 	author = {Dey, Palash and Misra, Neeldhara},
 	title = {Elicitation for Preferences Single Peaked on Trees},
 	year = {2016},
-	booktitle = {Proceedings of IJCAI'16},
+	booktitle = {Proc. of IJCAI'16},
 	pages = {215–221},
 	url={www.ijcai.org/Proceedings/16/Papers/038.pdf}
 }
@@ -233,7 +231,7 @@
 	year={2016},
 	pages={222-228},
 	url={www.ijcai.org/Abstract/16/039},
-	booktitle={Proceedings of IJCAI'16}
+	booktitle={Proc. of IJCAI'16}
 }
 
 @article{Dey2018,
@@ -250,7 +248,7 @@
 	author = {Endriss, Ulle and Obraztsova, Svetlana and Polukarov, Maria and Rosenschein, Jeffrey S.},
 	title = {Strategic Voting with Incomplete Information},
 	year = {2016},
-	booktitle = {Proceedings of IJCAI'16},
+	booktitle = {Proc. of IJCAI'16},
 	pages = {236–242},
 	url={www.ijcai.org/Proceedings/16/Papers/041.pdf}
 }
@@ -269,10 +267,8 @@
 	author = {Elkind, Edith and Erd\'{e}lyi, G\'{a}bor},
 	title = {Manipulation under Voting Rule Uncertainty},
 	year = {2012},
-	booktitle = {Proceedings AAMAS'12},
-	volume={2},
+	booktitle = {Proc. AAMAS'12},
 	pages = {627–634},
-	series = {AAMAS '12},
 	url={dl.acm.org/doi/10.5555/2343776.2343786}
 }
 
@@ -281,7 +277,7 @@
 	title={Dominating Manipulations in Voting with Partial Information},
 	year={2011},
 	url={www.aaai.org/ocs/index.php/AAAI/AAAI11/paper/view/3706},
-	booktitle={Proceedings of AAAI'11},
+	booktitle={Proc. of AAAI'11},
 }
 
 @article{Lev2019,
@@ -290,7 +286,7 @@
 	pages = {2077-2084},
 	title = {Heuristic Voting as Ordinal Dominance Strategies},
 	volume = {33},
-	journal = {Proceedings of the AAAI'19},
+	journal = {Proc. of the AAAI'19},
 	doi = {10.1609/aaai.v33i01.33012077}
 }
 
@@ -298,8 +294,7 @@
 	author = {Reijngoud, Annemieke and Endriss, Ulle},
 	title = {Voter Response to Iterated Poll Information},
 	year = {2012},
-	booktitle = {Proceedings of AAMAS'12},
-	volume={2},
+	booktitle = {Proc. of AAMAS'12},
 	pages = {635–644},
 	url={dl.acm.org/doi/10.5555/2343776.2343787}
 }
@@ -318,8 +313,15 @@
 	author = {Baumeister, Dorothea and Hogrebe, Tobias},
 	title = {Manipulative Design of Scoring Systems},
 	year = {2019},
-	booktitle = {Proceedings of AAMAS'19},
+	booktitle = {Proc. of AAMAS'19},
 	pages = {1814–1816},
-	series = {AAMAS '19},
 	url = {dl.acm.org/doi/10.5555/3306127.3331928}
+}
+
+@inproceedings{PrefLib,
+	author    = {Nicholas Mattei and Toby Walsh},
+	title     = {PrefLib: A Library of Preference Data \textsc{preflib.org}},
+	booktitle = {Proc. of ADT 2013},
+	year      = {2013},
+	url = {https://www.preflib.org/}
 }
