--- a/minimax.tex
+++ b/minimax.tex
@@ -289,16 +289,18 @@ This idea can be exploited further by adopting a minimax-search tree \citep{Braz
 We propose an incremental elicitation method based on minimax regret.
 At each step, the system may ask a question either to one of the agents about her preferences or to the chair about the voting rule. 
 The goal is to obtain relevant information to reduce minimax regret as quickly as possible.
-As termination condition of elicitation, we can check whether minimax regret is lower than a threshold; or after having asked a given number of questions.
+The elicitation can be terminated either after a given number of questions, or when the minimax regret is lower than a threshold (or until it drops to zero if we wish optimality).
+
+%As termination condition of elicitation, we can check whether minimax regret is lower than a threshold; or after having asked a given number of questions.
 %if we wish optimality, we can perform elicitation until minimax regret drops to zero.
 
-The remainder of this section is structured as follows.
-First, we discuss the different types of questions that can be asked to the agents and to the chair, and the way responses are handled.
-Then, we describe different strategies to determine informative queries to ask next, with the goal of reducing $\MMR(\pprofile,W)$ quickly.
+%The remainder of this section is structured as follows.
+%First, we discuss the different types of questions that can be asked to the agents and to the chair, and the way responses are handled.
+%Then, we describe different strategies to determine informative queries to ask next, with the goal of reducing $\MMR(\pprofile,W)$ quickly.
 
 \paragraph{Question types}
 We distinguish between questions asked to the agents and questions asked to the chair.
-As {\em questions asked to the agents} it is natural to consider comparison queries asking to compare two alternatives.
+As {\em questions asked to the agents} we consider comparison queries relating two alternatives.
 %Another common type of queries are {\em top-k}, asking to each agent her $k$ most preferred alternatives.
 The effect of a response to a question asked to an agent is the increase in our knowledge about the agent rankings, thus augmenting the partial profile $\pprofile$. 
 If agent $j$ answers a comparison query stating that alternative $a$ is preferred to $b$, then the partial order $\ppref_j$ is augmented with $a \ppref_j b$ and by transitive closure.
@@ -308,12 +310,13 @@ Such questions aim at refining our knowledge about the scoring rule; a response 
 In particular, we want to obtain constraints of the type $w_{r} - w_{r+1} \geq \lambda (w_{r+1} - w_{r+2})$ for $r \in \{1,\ldots,m-2\}$, relating the difference between the importance of ranks $r$ and $r+1$ with the difference between ranks $r+1$ and $r+2$.
 
 \paragraph{Building concrete questions for the chair}
-The chair might be considered able to answer such abstract questions in our setting; but we consider it important to make sure that these questions can also be asked in a more concrete way, in terms of winners of example profiles: such questions have precise semantics whose understanding can be assumed to be shared by the chair, contrary to abstract questions about weights. Our approach is analogous to that of decision theorists with preference elicitation: a large stream of research considers more meaningful to ask direct choice questions ("please choose either a or b") than to question the decision maker about the shape of its utility function. The former are considered "observable": acts of choice are translated to preference statements. In the social choice context, this way of asking questions has been used in experimental settings investigating the feeling of justice of individuals \citep{Giritligil2005}, but, to the best of our knowledge, the use of such questions to systematically guide an elicitation process is novel.
+Even if the chair might be considered able to answer such abstract questions, we consider important to make sure that these questions can also be asked in a more concrete way: in terms of winners of example profiles. Such questions have precise semantics whose understanding can be assumed to be shared by the chair, contrary to abstract questions about weights. A large stream of research considers more meaningful to ask direct choice questions ("please choose either a or b") than to question the decision maker about the shape of its utility function. The former are considered "observable": acts of choice are translated to preference statements. In the social choice context, this way of asking questions has been used in experimental settings investigating the feeling of justice of individuals \citep{Giritligil2005}, but, to the best of our knowledge, the use of such questions to systematically guide an elicitation process is novel. Moreover, this way of questioning the chair is independent of the voting rule that is being elicited. Asking questions about weights only works when a scoring rule is being considered.
 
 Thus, our task is to build a profile, given $\lambda$ and $r ≤ m-2$, in such a way that the set of (tied) winners picked by the chair reveals whether $w_{r} - w_{r+1} \geq \lambda (w_{r+1} - w_{r+2})$.
 \begin{proposition}\label{prop:chairQuestions}
 	Given a rational $\lambda = p/q > 1$ and a rank $r$ between $1$ and $m - 2$, there exists a profile $P$ such that, for any weight vector $\w \in \W$, $a \in f(P)$ iff $w_{r} - w_{r+1} ≥ \lambda (w_{r+1} - w_{r+2})$ and $b \in f(P)$ iff $w_{r} - w_{r+1} ≤ \lambda (w_{r+1} - w_{r+2})$, where $f$ is the PSR parameterized with $\w$.
 \end{proposition}
+See the proof of construction in \cref{proof:chairQuestions}.
 
 \begin{example*}
 	Suppose we want to ask the following question to the chair: $w_{2} - w_{3} ≥ 2 (w_{3} - w_{4})$. 
@@ -338,33 +341,19 @@ While it is of course possible to first fully elicit the agent preferences and a
 We define here the various strategies we tested experimentally. A strategy tells us, given the current partial knowledge $(\pprofile, W)$, which question should be asked next.
 
 The \strat{Random} strategy gives a baseline for comparison and informs about the difficulty of an elicitation problem. 
-This strategy first chooses equiprobably whether it will ask a question about weights or a question about a preference ordering. If it opted for a question about weights, it draws one rank in $1 ≤ r ≤ m-2$ equiprobably, takes the middle of the interval of values for $\lambda$ that are still possible considering our knowledge so far, and asks whether $w_r - w_{r+1} ≥ \lambda (w_{r+1} - w_{r+2})$. The intervals are initialized to $[1, n]$: $\lambda≥1$ by convexity and we assume $\lambda≤n$ wlog, in fact for $\lambda≥n$, the rule coincides with Plurality. If it opted for a question to agents, it draws equiprobably among the agents whose preference is not known entirely; draws an alternative $a$ equiprobably among those involved in some incomparabilities in $\ppref_j$; and draws an alternative $b$ equiprobably among those incomparable with $a$ in $\ppref_j$.
+This strategy first chooses equiprobably whether it will ask a question about weights or a question about a preference ordering. If it opted for a question about weights, it draws one rank in $1 ≤ r ≤ m-2$ equiprobably, takes the middle of the interval of values for $\lambda$ that are still possible considering our knowledge so far, and asks whether $w_r - w_{r+1} ≥ \lambda (w_{r+1} - w_{r+2})$.
+%The intervals are initialized to $[1, n]$: $\lambda≥1$ by convexity and we assume $\lambda≤n$ wlog, in fact for $\lambda≥n$, the rule coincides with Plurality.
+If it opted for a question to agents, it draws equiprobably among the agents whose preference is not known entirely; draws an alternative $a$ equiprobably among those involved in some incomparabilities in $\ppref_j$; and draws an alternative $b$ equiprobably among those incomparable with $a$ in $\ppref_j$.
 
 Let $(x^{*},\bar{y}, \bar{\profile}, \bar{\w})$ be the current solution of the minimax regret, where $\bar{y}, \bar{\profile}, \bar{\w}$ are, respectively, the choice of $y$, the completion of the profile and the selection of weights for which $x^{*}$ is the minimax optimal alternative. 
 The \strat{Pessimistic} strategy considers a set of $n + m$ candidate questions: one per agent, and one per rank.
-The candidate questions to the agents use the heuristic proposed by \citet{Lu2011}: for each agent $j$, if $x^*$ and $\bar{y}$ are incomparable in $\ppref_j$, the candidate question concerns the pair $(x^*, \bar{y})$, otherwise, the candidate question concerns the pair $(x^*, z)$ for some $z$ incomparable to $x^*$ (randomly chosen), or if none such $z$ exist, the pair $(\bar{y}, z)$ for some $z$ incomparable to $\bar{y}$, or, if both $x^*$ and $\bar{y}$ are comparable to every alternatives in $\ppref_j$, any incomparable pair is picked at random. 
-To understand the rationale behind the heuristic, 
-recall that, as shown in the proof of \cref{claim:completion}, in order to increase $\PMR(x^{*},\bar{y})$, the adversary should place as many alternatives as possible above $x^{*}$ if $x^* \ppref_j \bar{y}$, and between $\bar{y}$ and $x^{*}$ if $\bar{y} \ppref_j x^*$.  
-Responses to questions involving $x^*$ or $\bar{y}$ constrain the ability of the adversary to complete the profile in such manner, possibly reducing minimax regret.
+The candidate questions to the agents are chosen following the idea of \citet{Lu2011}: in order to increase $\PMR(x^{*},\bar{y})$, the adversary should place as many alternatives as possible above $x^{*}$ if $x^* \ppref_j \bar{y}$, and between $\bar{y}$ and $x^{*}$ if $\bar{y} \ppref_j x^*$.
+For each agent $j$, if $x^*$ and $\bar{y}$ are incomparable in $\ppref_j$, the candidate question concerns the pair $(x^*, \bar{y})$, otherwise, the candidate question concerns the pair $(x^*, z)$ for some $z$ incomparable to $x^*$ (randomly chosen), or if none such $z$ exist, the pair $(\bar{y}, z)$ for some $z$ incomparable to $\bar{y}$, or, if both $x^*$ and $\bar{y}$ are comparable to every alternatives in $\ppref_j$, any incomparable pair is picked at random. 
+%Responses to questions involving $x^*$ or $\bar{y}$ constrain the ability of the adversary to complete the profile in such manner, possibly reducing minimax regret.
 The candidate questions to the chair are determined as in the Random strategy.
+The Pessimistic strategy then selects among these $n + m$ candidate questions one that leads to minimal regret in the worst case: for each question we compute the minimax regret for the two possible answers, considering a penalty terms depending on the kind of question, and choose the best according to (quasi-)$\leximax$. We provide more details in \cref{sec:appendix}.
 
-The Pessimistic strategy then selects among these $n + m$ candidate questions one that leads to minimal regret in the worst case, considering both possible answers to the question, and with penalty terms depending on the kind of question. To define this comparison precisely, assume that a question $q_1$ has type $t_1$ (being “chair” or “agent”), and leads to the new knowledge states $(\pprofile_1, W_1)$ if answered positively and $(\pprofile'_1, W'_1)$ if the answer is negative. 
-Define $R^{\max}_1 = \max\set{\MMR(\pprofile_1, W_1), \MMR(\pprofile'_1, W'_1)}$
-and $R^{\min}_1 = \min\set{\MMR(\pprofile_1, W_1), \MMR(\pprofile'_1, W'_1)} \epsilon_{t} + \epsilon'_{t}$.
-%If $(\pprofile_1, W_1) ≥ (\pprofile'_1, W'_1)$, define $\MMR^{\max} = \MMR(\pprofile_1, W_1)$ and $\MMR^{\min} = \MMR(\pprofile'_1, W'_1)$; otherwise, define $\MMR^{\max} = \MMR(\pprofile'_1, W'_1)$ and $\MMR^{\min} = \MMR(\pprofile_1, W_1)$.
-% and and $(\pprofile^\min_2, W^\min_2)$. numbering them so that $\MMR(\pprofile_1, W_1) ≥ \MMR(\pprofile_2, W_2)$. Then the badness of the question in the worst case is:
-The terms $\epsilon_t$ and $\epsilon'_{t}$ are real numbers associated to the type $t$ of question; these parameters are to be determined experimentally and are used to fine control the choice of the question type.
-Define similarly $t_2$, $R^{\max}_2$ and $R^{\min}_2$ for a question $q_2$.
-We are now faced with the problem of aggregating these values in order to compare the informative values of the candidate questions. We adopt a pessimistic approach, reported to perform better than optimistic aggregation \citep{Cailloux2014}, although our experiments in this context suggested a weak impact of that choice on the performance of the strategy.
-To avoid the absorption property of the max, we adopt $\leximax$ as an aggregator.
-Pessimistic thus considers question $q_1$ to be better  than $q_2$ iff $R^{\max}_1 < R^{\max}_2 \text{ or } [R^{\max}_1 = R^{\max}_2 \text{ and } R^{\min}_1 < R^{\min}_2]$.
-%This comparison gives a way of picking questions among a set of possible questions, by picking one that minimizes this approximate measure of minimax regret {\em a posteriori}. 
-%The motivation for using this operator lies in 
-In other words if the maximal {\em a posteriori} MMR of two questions are (nearly) equal, then it considers the (penalized) minimal MMR values, preferring the question with the lowest value.
-(Technically, instead of applying a pure lexicographic aggregation, which is very sensitive to small errors due to floating-point computations, we apply a weighted sum between the maximal and the penalized minimal MMR values, with a predominant weight given to the maximal one, several order of magnitudes higher than the weight given to the penalized minimal MMR.)
-
-The \strat{Extended pessimistic} strategy uses the same criterion as the pessimistic strategy, but extending it to a bigger set of candidate questions, the same as those considered by the Random strategy.
-These candidate questions are then evaluated using the same operator as for the Pessimistic strategy, that is, we compute the minimax regret for the two possible answers, for each candidate question, and choose the best according to (quasi-)$\leximax$.
+The \strat{Extended pessimistic} strategy uses the same criterion as the pessimistic strategy, but extending it to a bigger set of candidate questions, the same as those considered by the Random strategy. These candidate questions are then evaluated using the same operator as for the Pessimistic strategy.
 We use this strategy to test whether Pessimistic performs well: depending on the quality of the heuristic of the Pessimistic strategy, it might perform nearly equally well, or perhaps even better, than Extended pessimistic, while being (much) faster. Extended pessimistic is applicable only to small problem instances: its complexity is in $O(n^2 m^5)$, because we consider $O(m^2)$ questions for each agent and need for each question to compute MMR twice, whose complexity is $O(nm^3)$.
 
 The \strat{Two phases} strategy is developed in order to investigate the effect of varying the proportion of questions asked to agents and to the chair, and compare the performance of asking questions to the chair first or to the agents first. It is parameterized by $q_c$, a value indicating the number of questions that must be asked to the chair.
@@ -374,7 +363,7 @@ The \strat{Two phases-ca} variant first asks $q_c$ questions to the chair, then 
 %This strategy also permits to simulate the current state of the art when considering incomplete preferences. By asking enough questions to the chair we can reduce our problem into a well studied one of incompleteness of preferences knowing the voting rule. Similarly, if we invert to whom ask questions first, we fall instead in an already studied case of uncertainty of the voting rule with a known complete profile. 
 
 Finally, the \strat{Elitist} strategy aims at uncovering as quickly as possible the top alternative of each agent. It asks $m - 1$ questions to each agent in turn. 
-Given an agent to query $j$, it asks about an alternative currently undominated in $\ppref_j$ and any alternative that it has not yet asked about for that agent, or equivalently, any alternative that is currently incomparable to this alternative. This approach guarantees that the top alternative in the ranking of $j$ will be known after having asked exactly $m-1$ questions to $j$.
+Given an agent to query $j$, it asks about an alternative currently undominated in $\ppref_j$ and any alternative that is currently incomparable to this alternative. This approach guarantees that the top alternative in the ranking of $j$ will be known after having asked exactly $m-1$ questions to $j$.
 After having asked $n (m-1)$ questions to the agents, it questions the chair only, using the same approach as the Pessimistic strategy.
 This strategy can be expected to perform well when the chair assigns a large weight to the first rank, as compared to the other ranks. It will be useful to further challenge the Pessimistic strategy, which is not specifically tailored to such a situation.
 
@@ -383,14 +372,14 @@ This strategy can be expected to perform well when the chair assigns a large wei
 \section{Empirical Evaluation} 
 \label{sec:experiments}
 We  performed a number of numerical experiments in order to validate our approach and to test the performance of the different elicitation strategies. %Our experiments are described by topic here below. 
-We start by describing the general protocol of experimentation. %use the following protocol, deviations are indicated below for each experiment.
-Having picked a problem size $(m, n)$, a number of questions $k$ and a strategy to test, we randomly generate an “oracle”, representing the true preferences of the agents (i.e. the linear orders) and the weights associated with the chair's scoring rule. 
-The preferences are generated following an impartial culture assumption: the linear order of each agent is generated independently from the other ones and all have the same probability of appearing. IC is a quite challenging situation: as can be expected intuitively (and shown experimentally by \citet{Lu2011} in their setting), the number of questions to be asked decrease with less varied profiles. We want to focus on the most critical setting, as there is a wide variety of possible situations to test in such experiments.
-For generating the weights we first draw $m - 1$ numbers uniformly at random (in the interval $\intvl{0,1}$ representing weight ``differences''), normalize and sort them; 
-a sequence of convex decreasing weight is then obtained by a decumulative sum.
+%We start by describing the general protocol of experimentation. %use the following protocol, deviations are indicated below for each experiment.
+We used both real data-sets and generated profiles. In the latter case, we pick a problem size $(m, n)$, a number of questions $k$ and a strategy to test, we then randomly generate an “oracle”, representing the true preferences of the agents (i.e. the linear orders) and the weights associated with the chair's scoring rule. 
+The preferences are generated following an impartial culture assumption: the linear order of each agent is generated independently from the other ones and all have the same probability of appearing. IC is a quite challenging situation: as can be expected intuitively (and shown in \cref{fig:linearity}), the number of questions to be asked decrease with less varied profiles. The real preferences are downloaded from \textit{PrefLib: A Library for Preferences} \citep{PrefLib} and passed to the oracle. In particular, we used the following data-sets: \textit{T Shirt} (11 T-Shirt designs (m) voted by 30 members (n) of the Optimization Research Group at NICTA), \textit{AGH Course Selection} (9 courses (m) evaluated by 146 students (n) of the AGH University) and Skate (14 skaters (m) evaluated by 9 judges (n) at the Euros Pairs Short Program).
+%We want to focus on the most critical setting, as there is a wide variety of possible situations to test in such experiments.
+For both real and generated data-sets we generate the weights of the scoring rule. We first draw $m - 1$ numbers uniformly at random (in the interval $\intvl{0,1}$ representing weight ``differences''), normalize and sort them; a sequence of convex decreasing weight is then obtained by a decumulative sum.
 The penalty parameters for the Pessimistic and Extended pessimistic strategies are set to $\epsilon_{\text{chair}} = 1.1$, $\epsilon'_{\text{chair}} = 10^{-6}$, $\epsilon_{\text{agent}} = 1.0$ and $\epsilon'_{\text{agent}} = 0$.
 
-We start with empty knowledge ($\pprofile = (\emptyset, \emptyset, …), W = \W$) about the preference orderings of the agents or the weight differences favored by the chair. We obtain the first question to be asked using the strategy under test, as described above. We then use the oracle to answer the question and update the system's knowledge, which is thus used to obtain the next question. This is repeated until $k$ answers have been obtained, computing the resulting MMR values along the way for various values of $k$. We repeat this whole experiment a variable number of times indicated below, for a given $(m, n, k)$, and report the average resulting MMR and the standard deviation \textit{sd}. The sizes of the considered scenarios are comparable to the ones used by \citet{Cailloux2014}. 
+We start with empty knowledge ($\pprofile = (\emptyset, \emptyset, …), W = \W$) about the preference orderings of the agents and the weight differences favored by the chair. We obtain the first question to be asked using the strategy under test. We then use the oracle to answer the question and update the system's knowledge, which is thus used to obtain the next question. This is repeated until $k$ answers have been obtained, computing the resulting MMR values along the way for various values of $k$. We repeat this whole experiment a variable number of times indicated below, for a given $(m, n, k)$, and report the average resulting MMR and the standard deviation \textit{sd}. The sizes of the considered scenarios are comparable to the ones used by \citet{Cailloux2014}. 
 
 \begin{figure}[t]
 	\caption{Average MMR in problems of size $(5, 10)$ after $k$ questions.}
@@ -460,7 +449,7 @@ Our first experiment concerns small size situations.
 %(The figure also displays the performance of the Elitist strategy, to which we will come back.)
 We see that asking random questions does not allow to reach a low regret level even after having asked 100 questions, whereas a low regret level ($\MMR$ = 1) is reached by Pessimistic before having asked 60 questions.
 We also see that Pessimistic performs slightly better than Extended pessimistic, showing that Pessimistic chooses candidate questions wisely; this is good news since Pessimistic is much faster: it takes on average only $16$s for a complete elicitation session (for $m = 5$, $n = 10$ and $100$ questions), while Extended pessimistic takes $50$s. Notice that although they exhibit a close performance, Pessimistic performs consistently better, in the sense that the numbers are systematically in favor of Extended pessimistic when performing the experiment again.
-\Cref{tab:biggerSize} shows that these conclusions also hold for a problem of larger size ($m = 10, n = 20$), except that this table does not feature Extended pessimistic, which is too slow to be run repeatedly on such instance.
+In \cref{sec:appendix} we provide a problem of larger size.
 
 We also compared the Pessimistic strategy against Elitist in a situation specifically tailored to advantage Elitist. For that experiment specifically, instead of drawing the weights of the oracle randomly, we fix it to a “geometric” weight vector, such that $w_r - w_{r + 1} = 2(w_{r + 1} - w_{r + 2})$, for all $r ≤ m - 2$, so as to dramatically increase the importance of the weights associated to the top ranks. Even in that case, we see in \cref{tab:geometricWeights} that Pessimistic performs better than Elitist.
 
@@ -470,9 +459,9 @@ We also compared the Pessimistic strategy against Elitist in a situation specifi
 \paragraph{Evaluation of Pessimistic Strategy}
 \label{sec:lowRegret}
 While in previous experiments we compared Pessimistic to the other strategies, in this set of experiments, we evaluate the Pessimistic strategy in absolute terms. 
-We first wonder how many questions should be asked in order to reach a low regret level. Here, we consider a low level to be a tenth of the number of agents ($n/10$): such a regret is equivalent to the difference of score of an alternative $x$ that results from switching from a profile $P$ to a profile $P'$ where ten percent of the agents rank $x$ last instead of first.
-The results for various sizes are displayed in \cref{tab:lowRegret}. 
-For the experiments we performed, we see that the number of questions required to reach a low regret level grows approximately linearly with the number of agents and grows less fast than the square of the number of alternatives. Averaging these data by category of value for $m$, and assuming no questions get asked to the chair, we see that in order to reach a low regret level, each agent will have to answer $5.6$ questions for $m = 5$, $17.2$ questions for $m = 10$ and $27.1$ questions for $m = 15$. These numbers have to be contrasted with the estimated number of questions required to elicit the full preference of an agent which are $6.6$ for $m=5$, $24.8$ for $m=10$ and $48.4$ for $m=15$. To obtain these data, we constrained the Pessimistic strategy to ask questions to the agents only, and ran it on a single agent problem, with various values for $m$.
+We first wonder how many questions should be asked in order to reach a low regret level. We consider a low level to be a tenth of the number of agents: such a regret is equivalent to the difference of score of an alternative $x$ that results from switching from a profile $P$ to a profile $P'$ where ten percent of the agents rank $x$ last instead of first.
+The results for various sizes are displayed in \cref{sec:appendix}. 
+For the experiments we performed, we see that the number of questions required to reach a low regret level grows approximately linearly with the number of agents and grows less fast than the square of the number of alternatives. Averaging these data by category of value for $m$, and assuming no questions get asked to the chair, we see that in order to reach a low regret level, each agent will have to answer $5.6$ questions for $m = 5$, $17.2$ questions for $m = 10$ and $27.1$ questions for $m = 15$. These numbers have to be contrasted with the estimated number of questions required to elicit the full preference of an agent which are $6.6$ for $m=5$, $24.8$ for $m=10$ and $48.4$ for $m=15$. To obtain these data, we constrained Pessimistic strategy to ask questions to the agents only, and ran it on a single agent problem, with various values for $m$.
 
 %\begin{table}
 %	\caption{Number of questions needed by the Pessimistic strategy to elicit the complete preference of one agent.}
@@ -554,11 +543,13 @@ For the experiments we performed, we see that the number of questions required t
 	\end{tikzpicture}
 \end{figure}
 
-We next wonder how fast the regret decreases, measured as a function of the number of questions asked. This is important practically because it may be impossible or undesirable to ask sufficient questions to reach a low regret level. Knowing the speed of decrease permits to know which trade-offs can be achieved between the quality of the resulting recommendation and the number of questions that participants have to answer. \Cref{fig:linearity} shows graphically the decrease in MMR according to the number of questions asked for various problem sizes. We see that this function is convex, apart from the very first few questions, indicating %to users of our approach 
-that, on average, halving the number of questions will only reduce the gain in regret by less than half. \commentBN{Reviewer: Halving the number of questions reduces the regret by more than 50\%.}
-
+We next wonder how fast the regret decreases, measured as a function of the number of questions asked. This is important practically because it may be impossible or undesirable to ask sufficient questions to reach a low regret level.
+%Knowing the speed of decrease permits to know which trade-offs can be achieved between the quality of the resulting recommendation and the number of questions that participants have to answer. 
+\Cref{fig:linearity} shows graphically the decrease in MMR according to the number of questions asked for various problem sizes. We see that this function is convex, apart from the very first few questions, indicating %to users of our approach 
+that, on average, halving the number of questions will only reduce the gain in regret by less than half. %\commentBN{Reviewer: Halving the number of questions reduces the regret by more than 50\%.}
 At the start of the elicitation, the space of uncertainty is so large that the adversary can attain the maximum possible value of regret; multiple answers are needed to constrain her enough for the MMR to start decreasing. When approaching optimality, the pace of MMR reduction decreases.
 
+In \cref{fig:linearity} we can also observe, as expected, that given a problem size the number of questions needed to reach a given MMR is lower when considering a real data-set than a IC generated profile. \commentBN{Add more?}
 % do less harm than halving the gain in regret, on average.
 
 %\subsection{Value of information comparison}
@@ -575,11 +566,11 @@ At the start of the elicitation, the space of uncertainty is so large that the a
 		30 & 0.62 & 0.5 & 0.8 & 0.62 \\
 		50 & 1.23 & 1.46 & 0.8 & 0.79 \\
 		100 & 2.03 & 1.56 & 1.88 & 1.02  \\
-		150 & 3.41 & 1.79 & 4.07 & 1.51 \\
+%		150 & 3.41 & 1.79 & 4.07 & 1.51 \\
 		200 & 4.61	& 1.35  & 6.53 & 2.0  \\
-		250 & 8.4 & 1.86 & 	7.69 & 1.24 \\
+%		250 & 8.4 & 1.86 & 	7.69 & 1.24 \\
 		300 &11.07 & 0.86& 11.87 & 1.25 \\
-		350 &15.06 & 0.68&15.59 & 0.6 \\
+%		350 &15.06 & 0.68&15.59 & 0.6 \\
 		400 &20.0 & 0.0 & 20.0 & 0.0 \\
 		\bottomrule
 	\end{tabular}
@@ -603,7 +594,7 @@ suggest that regret-based elicitation is effective and allows to quickly reduce 
 An open-source library, allowing to reproduce our experiments, will be made publicly available.\footnote{URL not displayed for anonymity reasons.}
 %and serve as a basis for further research
 
-We mention some directions for future works.
+%We mention some directions for future works.
 Further development of elicitation strategies, considering alternative heuristics, is an important direction. 
 Second, elicitation could be extended to voting rules beyond scoring rules. 
 Finally, an important direction of extension aims at studying how to elicit preferences while restraining to concrete and easy questions.
@@ -637,6 +628,27 @@ Finally, an important direction of extension aims at studying how to elicit pref
 \newpage
 \appendix
 \section{Appendix}
+\label{sec:appendix}
+\newtheorem*{details*}{Strategy Details}
+
+\begin{details*}[Pessimistic]
+	Once having selected $n + m$ candidate questions, the Pessimistic strategy selects the one that leads to minimal regret in the worst case, considering both possible answers to the question, and with penalty terms depending on the kind of question. To define this comparison precisely, assume that a question $q_1$ has type $t_1$ (being “chair” or “agent”), and leads to the new knowledge states $(\pprofile_1, W_1)$ if answered positively and $(\pprofile'_1, W'_1)$ if the answer is negative. 
+	Define $R^{\max}_1 = \max\set{\MMR(\pprofile_1, W_1), \MMR(\pprofile'_1, W'_1)}$
+	and $R^{\min}_1 = \min\set{\MMR(\pprofile_1, W_1), \MMR(\pprofile'_1, W'_1)} \epsilon_{t} + \epsilon'_{t}$.
+	%If $(\pprofile_1, W_1) ≥ (\pprofile'_1, W'_1)$, define $\MMR^{\max} = \MMR(\pprofile_1, W_1)$ and $\MMR^{\min} = \MMR(\pprofile'_1, W'_1)$; otherwise, define $\MMR^{\max} = \MMR(\pprofile'_1, W'_1)$ and $\MMR^{\min} = \MMR(\pprofile_1, W_1)$.
+	% and and $(\pprofile^\min_2, W^\min_2)$. numbering them so that $\MMR(\pprofile_1, W_1) ≥ \MMR(\pprofile_2, W_2)$. Then the badness of the question in the worst case is:
+	The terms $\epsilon_t$ and $\epsilon'_{t}$ are real numbers associated to the type $t$ of question; these parameters are to be determined experimentally and are used to fine control the choice of the question type.
+	Define similarly $t_2$, $R^{\max}_2$ and $R^{\min}_2$ for a question $q_2$.
+	We are now faced with the problem of aggregating these values in order to compare the informative values of the candidate questions. We adopt a pessimistic approach, reported to perform better than optimistic aggregation \citep{Cailloux2014}, although our experiments in this context suggested a weak impact of that choice on the performance of the strategy.
+	To avoid the absorption property of the max, we adopt $\leximax$ as an aggregator.
+	Pessimistic thus considers question $q_1$ to be better  than $q_2$ iff $R^{\max}_1 < R^{\max}_2 \text{ or } [R^{\max}_1 = R^{\max}_2 \text{ and } R^{\min}_1 < R^{\min}_2]$.
+	%This comparison gives a way of picking questions among a set of possible questions, by picking one that minimizes this approximate measure of minimax regret {\em a posteriori}. 
+	%The motivation for using this operator lies in 
+	In other words if the maximal {\em a posteriori} MMR of two questions are (nearly) equal, then it considers the (penalized) minimal MMR values, preferring the question with the lowest value.
+	(Technically, instead of applying a pure lexicographic aggregation, which is very sensitive to small errors due to floating-point computations, we apply a weighted sum between the maximal and the penalized minimal MMR values, with a predominant weight given to the maximal one, several order of magnitudes higher than the weight given to the penalized minimal MMR.)
+\end{details*}
+
+
 \begin{sketch*}[\cref{claim:completion}]
 	Consider our knowledge $\pprefeq_j$ about the preference of the agent $j$. 
 	The adversary's goal is to make the score of $y$ as high as possible and the score of $x$ as low as possible. 
@@ -666,6 +678,7 @@ Finally, an important direction of extension aims at studying how to elicit pref
 \end{proof*}
 
 \begin{proof*}[\cref{prop:chairQuestions}]
+	\label{proof:chairQuestions}
 	Define a linear order $>_1$ over $A$ as placing $a$ at rank $r$, $b$ at rank $r + 1$, and the remaining alternatives arbitrarily. 
 	Define a linear order $>_2$ over $A$ as placing $a$ at rank $r + 2$, $b$ at rank $r + 1$, and the remaining alternatives arbitrarily.
 	Define an arbitrary linear ordering $>$ over $A \setminus \set{a, b}$. 
@@ -678,23 +691,6 @@ Finally, an important direction of extension aims at studying how to elicit pref
 	Letting $s(x)$ denote the score of $x$ at $P$, we obtain $s(a) = q w_r + p w_{r + 2} + (p + q) w_1 + (p + q) w_2$, thus, $s(a) ≥ (p + q) w_m + (p + q) w_1 + (p + q) w_2$; $s(b) = (p + q) w_{r + 1} + (p + q) w_2 + (p + q) w_1$; and, $\forall c \in A \setminus \set{a, b}$, 
 	$s(c) ≤ (p + q) w_1 + (p + q) w_3 + (p + q) w_m$. It follows that $a$ or $b$ maximize $s$ (as $s(a) ≥ s(c)$). We conclude by observing that $a \in f(P) ⇔ s(a) ≥ s(b) ⇔ q w_r + p w_{r + 2} ≥ (p + q) w_{r + 1} ⇔ w_r - w_{r + 1} ≥ (p / q) (w_{r + 1} - w_{r + 2})$, and similarly for $b \in f(P)$.
 \end{proof*}
-
-\begin{table}[ht]
-	\caption{Number of questions needed by Pessimistic strategy to reach an MMR of $\frac{n}{10}$ (represented by $k_{\MMR}$), by size.}
-	\label{tab:lowRegret}
-	\begin{tabular}{S[table-figures-decimal=0]S[table-figures-decimal=0]SS[table-figures-integer=3, table-figures-decimal=0]}
-		\toprule
-		{m} & {n} & {$\frac{n}{10}$} & {$k_{\MMR}$} \\
-		\midrule
-		5 & 10 & 1 & 60 \\
-		5 & 15 & 1.5 & 80 \\
-		5 & 20 & 2 & 110 \\
-		10 & 20 & 2 & 340 \\
-		10 & 30 & 3 & 527 \\
-		15 & 30 & 3 & 951 \\
-		\bottomrule
-	\end{tabular}
-\end{table}
 
 \sisetup{table-number-alignment = center, table-figures-integer=2, table-figures-decimal=1, table-auto-round}
 \begin{table}[ht]
@@ -716,6 +712,27 @@ Finally, an important direction of extension aims at studying how to elicit pref
 		\bottomrule
 	\end{tabular}
 \end{table}
+\Cref{tab:biggerSize} shows that the conclusions of \cref{fig:smallSize} also hold for a problem of larger size ($m = 10, n = 20$), except that this table does not feature Extended pessimistic, which is too slow to be run repeatedly on such instance.
+
+\begin{table}[ht]
+	\caption{Number of questions needed by Pessimistic strategy to reach an MMR of $\frac{n}{10}$ (represented by $k_{\MMR}$), by size.}
+	\label{tab:lowRegret}
+	\begin{tabular}{S[table-figures-decimal=0]S[table-figures-decimal=0]SS[table-figures-integer=3, table-figures-decimal=0]}
+		\toprule
+		{m} & {n} & {$\frac{n}{10}$} & {$k_{\MMR}$} \\
+		\midrule
+		5 & 10 & 1 & 60 \\
+		5 & 15 & 1.5 & 80 \\
+		5 & 20 & 2 & 110 \\
+		10 & 20 & 2 & 340 \\
+		10 & 30 & 3 & 527 \\
+		15 & 30 & 3 & 951 \\
+		\bottomrule
+	\end{tabular}
+\end{table}
+
+
+
 
 \end{document}
 
